--- a/main.tex
+++ b/main.tex
@@ -115,12 +115,12 @@
 % *** GRAPHICS RELATED PACKAGES ***
 %
 \ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
+   \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
+   \graphicspath{{img/}}
   % and their extensions so you won't have to specify these with
   % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
+   \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
 \else
   % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
   % will default to the driver specified in the system graphics.cfg if no
@@ -216,11 +216,11 @@
 
 
 % *** SUBFIGURE PACKAGES ***
-%\ifCLASSOPTIONcompsoc
-%  \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
-%\else
-%  \usepackage[caption=false,font=footnotesize]{subfig}
-%\fi
+\ifCLASSOPTIONcompsoc
+  \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
+\else
+  \usepackage[caption=false,font=footnotesize]{subfig}
+\fi
 % subfig.sty, written by Steven Douglas Cochran, is the modern replacement
 % for subfigure.sty, the latter of which is no longer maintained and is
 % incompatible with some LaTeX packages including fixltx2e. However,
@@ -290,7 +290,7 @@
 
 % *** PDF, URL AND HYPERLINK PACKAGES ***
 %
-%\usepackage{url}
+\usepackage{url}
 % url.sty was written by Donald Arseneau. It provides better support for
 % handling and breaking URLs. url.sty is already installed on most LaTeX
 % systems. The latest version and documentation can be obtained at:
@@ -319,7 +319,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Bare Demo of IEEEtran.cls\\ for IEEE Conferences}
+\title{Overview on UWB\\standard 802.15.4-2024}
 
 
 % author names and affiliations
@@ -381,43 +381,9 @@ Mat: 2158818
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-The purpose of this survey is to understand and address these topics of the standard IEEE 802.15.4-2024, "IEEE Standard for Low-Rate wireless networks":
-\begin{itemize}
-    \item Architecture:
-    \begin{itemize}
-        \item Physical layer
-        \begin{itemize}
-            \item Frequency
-            \item Channel assignments
-            \item Transmit power
-            \item Modulation tipes:
-            \begin{itemize}
-                \item O-QPSK
-                \item BPSK
-                \item CSS
-                \item 
-            \end{itemize}
-        \end{itemize}
-        \item MAC layer
-        \begin{itemize}
-            \item Channel access
-            \item Synchronization
-            \item Transmission, reception and ACK
-        \end{itemize}
-    \end{itemize}
-    \item Overview of functional aspects:
-    \begin{itemize}
-        \item Scheduled access
-        \item Data transfer model
-        \item Frame structure
-        \item Information Element
-        \item Access methods
-        \item Power consumption considerations
-        \item Security
-        \item Enabling spectrum resource capability
-    \end{itemize}
-    \item 
-\end{itemize}
+The purpose of this survey is to understand and address these topics of the standard IEEE 802.15.4-2024,
+"IEEE Standard for Low-Rate wireless networks":
+Architecture, where we will s
 
 \end{abstract}
 
@@ -440,23 +406,60 @@ The purpose of this survey is to understand and address these topics of the stan
 
 \section{Introduction}
 % no \IEEEPARstart
-This demo file is intended to serve as a ``starter file''
-for IEEE conference papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
+The standard covers many physical layers and one Medium Access Control layer (MAC) for 
+low rate wireless personal area networks (LR-WPAN).
+There are some special applications such as Smart Utility Network, 
+Rail Communications and Control, Radio Frequency Identification (RFID),
+Medical Body Area Networks. Among many others it covers the one we are interested in,
+the Ultra Wide Band (UWB) technology.
+UWB is a technology generally defined like others in the standard as a Wireless Personal Area Network 
+(WPAN). So we will give an quick overview of the standard and then focus on the UWB technology.
 
-\hfill mds
- 
-\hfill August 26, 2015
+%\hfill mds
+% 
+%\hfill August 26, 2015
 
-\subsection{Subsection Heading Here}
-Subsection text here.
+\section{General Description}
+\subsection{Network Topologies}
+Topologies for LR-WPAN are two, star and peer-to-peer.
+In the star topology, the coordinator is the central device and the other devices are the
+end devices. The coordinator is the only device that can communicate with the end devices,
+and is usually wall powered, whilst end devices are battery powered.
+Suited for home automation, personal health care and games.\\
+The peer-to-peer topology is a network of devices that can communicate with each other,
+thus allowing for more complex networks, such as mesh networks, using multiple hops, 
+implemented at higher level, thus not discussed in this standard.
+Suited for sensor networks, enabling smart agriculture, industrial control 
+and monitoring and asset and inventory traking.
+\begin{figure}[!t]
+    \centering
+    \includegraphics[width=1\linewidth]{topologies}
+    \caption{Star and peer-to-peer topologies}
+    \label{fig:topologies}
+\end{figure}
 
+Each indipendent PAN selects a UID (PAN Identifier) thus allowing for multiple PANs to coexist,
+moreover each device in a PAN can communicate within with a short address, permits to
+communicate also with another device from another PAN.\\
 
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\subsection{Architecture}
+The architecture is composed of three layers:
+\begin{itemize}
+    \item Physical Layer (PHY)
+    \item Medium Access Control (MAC)
+    \item Higher layers
+\end{itemize}
+
+Only PHY and MAC are defined in the standard, the higher layers, such as network,
+that involves its configuration, message routing and manipulation are left to the implementer.
+as well as the application layer.
+
+\subsubsection{Physical Layer}
+The PHY layer has its main focus on the activation and deactivation of the radio transceiver,
+energy detection, link quality indication, channel selection, clear channel assessment,
+ranging and data transmission and reception.
+In the specific case of High Rate Pulse repetition frequency UWB, it also serves the purpose 
+of precision ranging.
 
 
 % An example of a floating figure using the graphicx package.
