--- a/main.tex
+++ b/main.tex
@@ -781,7 +781,7 @@ UWB should implement one of the following CCA methods (last 2 only for HRP UWB):
       \item Mode 3b: Carrier sense with Energy above threshold (both required), it reports 
             busy if both Mode 1 and Mode 2 report busy.
     \end{itemize}
-    \item Mode 4: ALOHA, CCA should always report an idle medium
+    \item Mode 4: ALOHA, CCA should always report an idle medium.
     \item Mode 5: Known as preamble sense, it reports busy if after listnening finds the 
           synchronization header of a frame. After it should wait atleast for the frame to be
           completely sent and acknowledged before reporting idle.
