--- a/main.tex
+++ b/main.tex
@@ -790,6 +790,10 @@ UWB should implement one of the following CCA methods (last 2 only for HRP UWB):
 
 \section{HRP UWB PHY}
 \subsection{General}
+To be compliant with the standard, the PHY layer must implement support for at least one
+between the channels 0, 3 and 9. Within each there is support for at least 2 complex channels
+that have unique lenght 31 preamble codes. So the device must support the lenght 31 codes for
+each channel it implements.\\
 
 
 % An example of a floating figure using the graphicx package.
