--- a/main.tex
+++ b/main.tex
@@ -795,6 +795,23 @@ between the channels 0, 3 and 9. Within each there is support for at least 2 com
 that have unique lenght 31 preamble codes. So the device must support the lenght 31 codes for
 each channel it implements.\\
 
+To increment ranging accuracy, reduced on-air time and power consumption, the standard
+also provides optional modes for example scrambled timestamp sequence (STS), these devices
+that use this additional modes are called HRP-ERDEV (Enhanced Ranging Devices) and must
+support:
+\begin{itemize}
+  \item Operation at the Base Pulse Repetition Frequency (BPRF) of 64 MHz.
+  \item Operation at higher PRF than BPRF, called HPRF.
+\end{itemize}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{STS-pak}
+  \caption{STS position and Pysical Protocol Data Unit (PPDU) format}
+  \label{fig:STS}
+\end{figure}
+
+
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
